--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   shared_preferences: ^2.3.2
   intl: ^0.19.0
 
+  file_picker: ^8.0.0
+  flutter_map: any
+  latlong2: any 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
