--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
-
+    sdk: flutter 
+ 
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
   dio: ^5.7.0
@@ -20,6 +20,7 @@ dependencies:
   file_picker: ^8.0.0
   flutter_map: any
   latlong2: any 
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +29,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/labaduh_loading.png
+    - assets/lottie/loading.json
+    - assets/lottie/labaduh_logo.json
+    - assets/images/labaduh_logo.png
