--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   latlong2: ^0.9.1
   geolocator: ^11.0.0
   lottie: ^3.1.0
-
+  flutter_typeahead: ^4.4.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
