--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   lottie: ^3.1.0
   flutter_typeahead: ^4.4.2
   http: ^1.1.0
-  intl_phone_number_input: ^0.7.4
+  intl_phone_number_input: ^0.7.5  # Add this line
   
 dev_dependencies:
   flutter_test:
