--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,3 +40,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/lottie/images/labaduh_logo.png
+    - assets/branding/labaduh_logo.png
