--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = labaduh
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.labaduh
+PRODUCT_BUNDLE_IDENTIFIER = com.labaduh.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
