--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_map: ^6.2.1
   latlong2: ^0.9.1
   geolocator: ^11.0.0
-  lottie: ^3.1.0
+  lottie: ^3.3.2
   flutter_typeahead: ^4.4.2
   http: ^1.1.0
   intl_phone_number_input: ^0.7.5  # Add this line
@@ -41,4 +41,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/lottie/images/labaduh_logo.png
-    - assets/branding/labaduh_logo.png
+    - assets/branding/labaduh_logo.png 
+    - assets/branding/labaduh_loading.json
